@@ -5,6 +5,10 @@ Django MPTT CHANGELOG
 Wed 2nd Jan, 2008
 -----------------
 
+* Extracted logic for moving a ``Model`` instance from one tree to
+  another from ``mptt.signals.pre_save`` into the ``move_to_new_tree``
+  method in ``TreeManager``.
+
 * Extracted some similar move-node-to-tree queries in ``TreeManager``'s
   ``make_child_node`` and ``make_root_node`` methods out into a new
   ``_inter_tree_move`` method.
